Landing page até Itens

--- a/HTML_CSS/Landing Page/assets/css/style.css
+++ b/HTML_CSS/Landing Page/assets/css/style.css
@@ -12,12 +12,19 @@
 
 html {
     font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 
 body {
     font-family: "Open Sans", sans-serif;
     font-size: 1.6rem;
     color: var(--white-color);
+    line-height: 1.5;
+}
+
+li a {
+    color: var(--primary-color);
+    text-transform: uppercase;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -33,6 +40,9 @@ h1 {
 
 h2 {
     font-size: 5.5rem;
+    line-height: 1.2;
+    margin-bottom: 5rem;
+    text-transform: uppercase;
 }
 
 h3 {
@@ -49,6 +59,10 @@ h5 {
 
 h6 {
     font-size: 3.5rem;
+}
+
+p {
+    margin-bottom: 3rem;
 }
 
 .main-bg {
@@ -83,7 +97,8 @@ h6 {
     left: 0;
     right: 0;
     width: 100%;
-    border-bottom: 0.1rem solid var(--light-gray-color)
+    border-bottom: 0.1rem solid var(--light-gray-color);
+    z-index: 1;
 }
 
 .menu-content {
@@ -100,6 +115,23 @@ h6 {
 
 .menu h1 a {
     text-decoration: none;
+    color: var(--primary-color);
+}
+
+.menu h1 a:visited {
+    color: var(--primary-color);
+}
+
+.menu h1 a:active {
+    color: var(--primary-color);
+}
+
+.menu li a:visited {
+    color: var(--primary-color);
+}
+
+.menu li a:active {
+    color: var(--primary-color);
 }
 
 .menu ul {
@@ -139,4 +171,123 @@ h6 {
 .menu ul li a:hover::after {
     width: 50%;
     left: 25%;
+}
+
+.menu-spacing {
+    height: 6.2rem;
+}
+
+.intro-content {
+    position: relative;
+    top: -7rem;
+    display: grid;
+    grid-template-columns: 1fr 1.5fr;
+    gap: var(--gap);
+    height: 100vh;
+}
+
+.intro-text-content, .intro-img {
+    display:flex;
+    flex-flow: column wrap;
+    justify-content: center;
+}
+
+.intro-text-content h2 {
+    font-size: 6rem;
+}
+
+.intro-img img {
+    max-width: 100%;
+    height: auto;
+}
+
+.bio h2 {
+    font-size: 6rem;
+    color: var(--primary-color);
+    
+}
+.bio p{
+color: var(--primary-color);
+}
+
+.bio-content {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    height: 100vh;
+}
+
+.bio-text-content {
+    display:flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    text-align: center;
+    margin-bottom: -7rem;
+}
+
+.pontos h2{
+    
+}
+
+.pontos-content {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    height: 100vh;
+}
+
+
+.pontos-text-content {
+
+}
+
+.grid-pontos {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: var(--gap);
+    counter-reset: grid-counter;
+}
+
+.grid-pontos h3 {
+    font-size: 3rem;
+    position: relative;
+    padding-left: 10rem;
+    padding-bottom: 1rem;
+}
+
+.grid-pontos h3::before {
+    font-size: 3rem;
+    counter-increment: grid-counter;
+    content: counter(grid-counter) 'º';
+    position: absolute;
+    font-size: 8rem;
+    font-style: italic;
+    top: -4rem;
+    left: 0;
+}
+
+
+.grid-pontos p {
+    font-size: 1.8rem;
+}
+
+.galeria-content {
+    display: flex;
+    flex-flow: column nowrap;
+    /* justify-content: center; */
+    height: 100vh;
+}
+
+.grid-galeria {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: var(--gap);
+}
+
+.galeria-content h2 {
+    margin-top: 6rem;
+    color: var(--primary-color);
+}
+.grid-foto {
+    color: var(--primary-color);
 }
