--- a/HTML_CSS/Landing Page/assets/css/style.css
+++ b/HTML_CSS/Landing Page/assets/css/style.css
@@ -8,6 +8,8 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+
 }
 
 html {
@@ -179,11 +181,11 @@ p {
 
 .intro-content {
     position: relative;
-    top: -7rem;
+    /* top: -7rem; */
     display: grid;
     grid-template-columns: 1fr 1.5fr;
     gap: var(--gap);
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .intro-text-content, .intro-img {
@@ -214,7 +216,7 @@ color: var(--primary-color);
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .bio-text-content {
@@ -226,14 +228,13 @@ color: var(--primary-color);
 }
 
 .pontos h2{
-    
 }
 
 .pontos-content {
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 
@@ -275,7 +276,7 @@ color: var(--primary-color);
     display: flex;
     flex-flow: column nowrap;
     /* justify-content: center; */
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .grid-galeria {
@@ -290,4 +291,169 @@ color: var(--primary-color);
 }
 .grid-foto {
     color: var(--primary-color);
+    background: purple;
+    width: 100%;
+    min-height: 30rem;
+    min-width: 30rem;
+    max-width: 30rem;
+    max-height: 30rem;
+    overflow: hidden;
+}
+
+
+.grid-foto img, img {
+    transition: all 300ms ease-in-out;
+}
+
+img:hover {
+    transform: scale(110%) rotate(5deg);
+}
+
+.contato-form {
+    grid-column: span 2;
+}
+
+.contato-form .form-grid {
+    border: none;
+    display: flex;
+    flex-flow: row wrap;
+    gap: var(--gap);
+}
+
+.form-grid legend{
+    font-size: 3rem;
+    font-style: italic;
+    margin-bottom: 2rem;
+}
+
+.form-group {
+    min-width: 32rem;
+    flex: 1 1 40rem;
+}
+
+
+
+.form-group ::placeholder {
+    color: var(--light-gray-color);
+    font-family: "Open Sans", sans-serif;
+
+}
+
+.form-group label {
+    display: block;
+    margin-bottom: 1rem;
+}
+
+.form-group input,
+.form-group textarea {
+    border: none;
+    background: var(--white-color);
+    padding: 1rem 2rem;
+    width: 100%;
+    font-family: "Open Sans", sans-serif;
+    font-size: 1.6rem;
+    outline: none;
+}
+
+.form-group input:focus,
+.form-group textarea:focus {
+    box-shadow: 0 0 10px 2px var(--light-gray-color)
+}
+
+.full-width {
+    width: 100%;
+    flex: 1 1 100%;
+}
+
+.form-group button {
+    border: 0.5rem solid var(--white-color);
+    background-color: var(--primary-color);
+    color: var(--light-gray-color);
+    padding: 1.5rem 2rem;
+    transition: all 300ms ease-in-out;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.form-group button:hover {
+    border: 0.5rem solid var(--white-color);
+    background-color: var(--white-color);
+    color: var(--primary-color);    
+}
+
+.form-group button:active {
+    transform: scale(90%);
+}
+
+.close-menu {
+    display: none;
+}
+
+@media (max-width: 1100px) {
+    .intro-content, .grid-pontos {
+        grid-template-columns: 1fr;
+    }
+    .grid-galeria {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 800px) {
+    .intro-content, .grid-pontos, .grid-galeria {
+        grid-template-columns: 1fr;
+    }
+
+
+    .grid-foto {
+        width: 100%;
+        max-width: 100%;
+        max-height: 100%;
+    }
+
+    .grid-foto img {
+        width: 100%;
+    }
+
+    .menu {
+        height: 100vh;
+        flex-direction: column;
+        text-align: center;
+    }
+
+
+    .menu-content, .menu ul  {
+        flex-direction: column;
+        justify-content: center;
+        min-height: 100vh;
+    }
+    
+    .menu {
+        display: none;
+    }
+
+
+    .close-menu-label::after {
+        content: '☰';
+        position: fixed;
+        z-index: 2;
+        top: 2rem;
+        right: 2rem;
+        font-size: 3rem;
+        background: var(--primary-color);
+        color: var(--white-color);
+        padding: 0.5rem 1rem;
+        cursor: pointer;
+    }
+
+    .close-menu:checked~.menu {
+        display: block;
+    }
+
+    .close-menu:checked~.close-menu-label::after {
+        content: '×';
+    }
+
+    .menu-spacing {
+        display: none;
+    }
 }
